Agent Atlas/forceapp/main/default/objects/Form_Response__c/fields/AI_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence_Score__c</fullName>
    <label>AI Confidence Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>