Agent Atlas/forceapp/main/default/objects/Form_Response__c/fields/Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission__c</fullName>
    <label>Form Submission</label>
    <referenceTo>Form_Submission__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>