Agent Atlas/forceapp/main/default/objects/Form_Response__c/fields/Modified_By_User__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modified By User</label>
    <type>Checkbox</type>
</CustomField>