Agent Atlas/forceapp/main/default/objects/Form_Response__c/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName>
    <label>Page Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>