Agent Atlas/forceapp/main/default/objects/Form_Response__c/fields/Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Question_Id__c</fullName>
    <label>Question Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>