Agent Atlas/forceapp/main/default/objects/Form_Response__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>