Agent Atlas/forceapp/main/default/objects/Form_Response__c/fields/Response_Value__c.field-meta.xml
<CustomField>
    <fullName>Response_Value__c</fullName>
    <label>Response Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>