Agent Atlas/forceapp/main/default/objects/Form_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AI_Confidence_Score__c</columns>
    <columns>NAME</columns>
    <columns>Question_Id__c</columns>
    <columns>Form_Submission__c</columns>
    <columns>Response_Value__c</columns>
    <columns>Response_Date__c</columns>
    <columns>Question_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>